Fix a11y ordering, mobile overlap

--- a/assets/css/timeline.css
+++ b/assets/css/timeline.css
@@ -77,12 +77,13 @@
 }
 
 
-/* Timeline Entry Year */
+/* Timeline Entry Title */
 .timeline__content-title {
-  font-size: 66px;
+  font-size: 30px;
   margin: -10px 0 0 0;
   transition: .4s;
-  padding: 0 10px;
+    padding-top: 70px;
+    padding-right: 10px;
   box-sizing: border-box;
   font-family: Frightmare;
   font-weight: normal;
@@ -134,7 +135,7 @@
   width: 100%;
   position: absolute;
   color: #8AC45F;
-  font-size: 40px;
+  font-size: 60px;
   font-family: Frightmare, sans-serif;
   border-left: 1px solid rgba(255, 255, 255, 0.5);
   top: 70%;
